Fix excess spacing under elems in panel-heading and panel-footer in ie8

--- a/static_files/assets/scss/_components.scss
+++ b/static_files/assets/scss/_components.scss
@@ -21,6 +21,10 @@
 
 
 /* Panels */
+.panel-heading .form-group.last-child,
+.panel-footer .form-group.last-child {
+  margin-bottom: 0;
+}
 .panel-heading .form-group:last-child,
 .panel-footer .form-group:last-child {
   margin-bottom: 0;
